--- a/src/app/alumnos/alumnos.component.html
+++ b/src/app/alumnos/alumnos.component.html
@@ -1,14 +1,60 @@
+<ion-content>
+<ion-button fill="clear" (click)="abrirActionSheet()">
+    <ion-icon name="ellipsis-vertical"></ion-icon>
+</ion-button>
 <p>Asistencias</p>
-<ion-list id="ListaPresente">
-    <!--renderizar lista basada en una lista proporcionada en la lógica-->
-    <ion-item *ngFor="let alumno of alumnos" [ngClass]="{'inasistencia': !alumno.presente, 'presente': alumno.presente}">
-        {{alumno.nombre}}
-    </ion-item>
+<ion-list id="ListaPresente"> <!--renderizar lista basada en una lista proporcionada en la lógica-->
+    <!--elemento deslizable-->
+    <ion-item-sliding *ngFor="let alumno of alumnos" [ngClass]="{'inasistencia': !alumno.presente, 'presente': alumno.presente}">
+        
+        <!--label de elemento deslizable-->
+        <ion-item>
+            <ion-label>{{alumno.nombre}}</ion-label>  
+        </ion-item>
+
+        <!--opciones de elemento deslizable-->
+        <ion-item-options side="start"><!--opciones a la izquierda-->
+            <ion-item-option color="warning" (click)="mensajeAlerta('favorito')">
+                <ion-icon name="star"></ion-icon>
+            </ion-item-option>
+        </ion-item-options>
+        <ion-item-options side="end"><!--opciones a la derecha-->
+            <ion-item-option color="danger" (click)="mensajeAlerta('archivar')"><!--archivar-->
+                <ion-icon name="archive" ></ion-icon>
+            </ion-item-option>
+            <ion-item-option color="danger" (click)="mensajeAlerta('eliminar')">
+                <ion-icon name="trash"></ion-icon>
+            </ion-item-option>
+        </ion-item-options>
+    </ion-item-sliding>
+    
+    
 </ion-list>
 
 <p>Inasistencias</p>
 <ion-list id="ListaAusente">
-    <ion-item *ngFor="let alumno of alumnos" [ngClass]="{'inasistencia': !alumno.presente, 'presente': alumno.presente}">
-        {{alumno.nombre}}
-    </ion-item>
+    <ion-item-sliding *ngFor="let alumno of alumnos" [ngClass]="{'inasistencia': !alumno.presente, 'presente': alumno.presente}">
+        
+        <ion-item >
+            <ion-label>{{alumno.nombre}}</ion-label>
+        </ion-item>
+
+        <ion-item-options side="start"><!--opciones a la izquierda-->
+            <ion-item-option color="warning" (click)="mensajeAlerta('favorito')">
+                <ion-icon name="star" ></ion-icon>
+            </ion-item-option>
+        </ion-item-options>
+
+        <ion-item-options side="end"><!--opciones a la derecha-->
+            <ion-item-option color="danger" (click)="mensajeAlerta('archivar')"><!--archivar-->
+                <ion-icon name="archive" ></ion-icon>
+            </ion-item-option>
+            <ion-item-option color="danger" (click)="mensajeAlerta('eliminar')"><!--eliminar-->
+                <ion-icon name="trash" ></ion-icon>
+            </ion-item-option>
+        </ion-item-options>
+        
+    </ion-item-sliding>
+    
 </ion-list>
+</ion-content>
