--- a/src/app/materias/materias.component.html
+++ b/src/app/materias/materias.component.html
@@ -1,5 +1,5 @@
 <ion-content>
-    <p>Agregar lisat de materias</p>
+    <p>Agregar lista de materias</p>
     <ion-list>
         <ion-item *ngFor="let materia of materias">{{materia}}</ion-item>
     </ion-list>
