--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,11 @@
           <ion-label>Asistencia de alumnos</ion-label>
           <ion-icon name="people"></ion-icon>
         </ion-tab-button>
+
+        <ion-tab-button tab="materias">
+          <ion-label>Materias</ion-label>
+          <ion-icon name="people"></ion-icon>
+        </ion-tab-button>
       </ion-tab-bar>
     </ion-tabs>
   </ion-content>
